--- a/rt/package.json
+++ b/rt/package.json
@@ -14,6 +14,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "aws-amplify": "^6.0.18",
     "framer-motion": "^11.0.8",
+    "imagemin": "^9.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-webp": "^8.0.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
